corrected dark mode on small screens and some other faults

--- a/src/output.css
+++ b/src/output.css
@@ -562,6 +562,10 @@ video {
   top: 4rem;
 }
 
+.right-8 {
+  right: 2rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -573,16 +577,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-8 {
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .flex {
@@ -639,6 +633,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .max-w-\[1620px\] {
@@ -765,6 +767,14 @@ video {
   fill: rgb(41 37 36 / 0.5);
 }
 
+.fill-blue-800\/50 {
+  fill: rgb(30 64 175 / 0.5);
+}
+
+.fill-red-800\/50 {
+  fill: rgb(153 27 27 / 0.5);
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -788,6 +798,14 @@ video {
 
 .pt-12 {
   padding-top: 3rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .text-center {
@@ -838,13 +856,23 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.blur-sm {
-  --tw-blur: blur(4px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.shadow-stone-200\/70 {
+  --tw-shadow-color: rgb(231 229 228 / 0.7);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
-.brightness-50 {
-  --tw-brightness: brightness(.5);
+.shadow-stone-600\/70 {
+  --tw-shadow-color: rgb(87 83 78 / 0.7);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-stone-600\/50 {
+  --tw-shadow-color: rgb(87 83 78 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.blur-sm {
+  --tw-blur: blur(4px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -914,27 +942,28 @@ article {
   color: rgb(41 37 36 / var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:bg-lime-800) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 98 18 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-black\/50) {
-  background-color: rgb(0 0 0 / 0.5);
-}
-
-:is(.dark .dark\:bg-black\/20) {
-  background-color: rgb(0 0 0 / 0.2);
+.group:hover .group-hover\:text-stone-800 {
+  --tw-text-opacity: 1;
+  color: rgb(41 37 36 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:bg-black\/10) {
   background-color: rgb(0 0 0 / 0.1);
 }
 
-:is(.dark .dark\:from-orange-900) {
-  --tw-gradient-from: #7c2d12 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(124 45 18 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+:is(.dark .dark\:bg-lime-800) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 98 18 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-stone-700) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(68 64 60 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-black) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:from-stone-800) {
@@ -943,107 +972,21 @@ article {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-:is(.dark .dark\:from-stone-800\/50) {
-  --tw-gradient-from: rgb(41 37 36 / 0.5) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(41 37 36 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:from-stone-800\/80) {
-  --tw-gradient-from: rgb(41 37 36 / 0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(41 37 36 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:from-stone-700) {
-  --tw-gradient-from: #44403c var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(68 64 60 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:via-amber-600) {
-  --tw-gradient-to: rgb(217 119 6 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #d97706 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:via-amber-800) {
-  --tw-gradient-to: rgb(146 64 14 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #92400e var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:via-neutral-700) {
-  --tw-gradient-to: rgb(64 64 64 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #404040 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:via-neutral-700\/90) {
-  --tw-gradient-to: rgb(64 64 64 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(64 64 64 / 0.9) var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
 :is(.dark .dark\:via-neutral-800) {
   --tw-gradient-to: rgb(38 38 38 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #262626 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-:is(.dark .dark\:to-lime-900) {
-  --tw-gradient-to: #365314 var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-lime-600) {
-  --tw-gradient-to: #65a30d var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-neutral-900) {
-  --tw-gradient-to: #171717 var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-neutral-800) {
-  --tw-gradient-to: #262626 var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-neutral-700\/50) {
-  --tw-gradient-to: rgb(64 64 64 / 0.5) var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-neutral-700\/80) {
-  --tw-gradient-to: rgb(64 64 64 / 0.8) var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-neutral-700) {
-  --tw-gradient-to: #404040 var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-zinc-700) {
-  --tw-gradient-to: #3f3f46 var(--tw-gradient-to-position);
 }
 
 :is(.dark .dark\:to-zinc-800) {
   --tw-gradient-to: #27272a var(--tw-gradient-to-position);
 }
 
+:is(.dark .dark\:fill-white\/50) {
+  fill: rgb(255 255 255 / 0.5);
+}
+
 :is(.dark .dark\:text-white\/50) {
   color: rgb(255 255 255 / 0.5);
-}
-
-:is(.dark .dark\:shadow-white\/80) {
-  --tw-shadow-color: rgb(255 255 255 / 0.8);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-:is(.dark .dark\:shadow-lime-500\/80) {
-  --tw-shadow-color: rgb(132 204 22 / 0.8);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-:is(.dark .dark\:shadow-lime-900\/80) {
-  --tw-shadow-color: rgb(54 83 20 / 0.8);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-:is(.dark .dark\:shadow-lime-900\/50) {
-  --tw-shadow-color: rgb(54 83 20 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 :is(.dark .dark\:shadow-lime-900\/30) {
@@ -1051,7 +994,17 @@ article {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+:is(.dark .dark\:shadow-black\/70) {
+  --tw-shadow-color: rgb(0 0 0 / 0.7);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 :is(.dark .dark\:hover\:text-white:hover) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover :is(.dark .group-hover\:dark\:text-white) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1067,12 +1020,24 @@ article {
     display: block;
   }
 
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:hidden {
     display: none;
   }
 
   .xl\:h-24 {
     height: 6rem;
+  }
+
+  .xl\:w-24 {
+    width: 6rem;
+  }
+
+  .xl\:bg-white\/50 {
+    background-color: rgb(255 255 255 / 0.5);
   }
 
   .xl\:px-16 {
@@ -1090,5 +1055,9 @@ article {
 
   .xl\:pt-24 {
     padding-top: 6rem;
+  }
+
+  :is(.dark .dark\:xl\:bg-black\/10) {
+    background-color: rgb(0 0 0 / 0.1);
   }
 }
